samples/_failures_safe/1761541912_ba190e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ac15f82.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9ac15f82.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
